# ministg

./: LICENSE  Makefile  README.md  README.txt  ministg.cabal
.github/workflows/: haskell.yml
data/: Prelude.stg
src/: Main.hs
src/Ministg/: AST.hs  Annotate.hs  Arity.hs  CallStack.hs  DumpState.hs  Eval.hs  GC.hs  Lexer.hs  Options.hs  Parser.hs  Pretty.hs  State.hs  TraceEval.hs  Utils.hs
test/: Prelude.stg  append.stg  apply.stg  blackhole.stg  docs.stg  error.stg  fac.stg  facunary.stg  fibs.stg  length.stg  map.stg  map_pap.stg  non_exhaustive_pattern.stg  ones.stg  seq.stg  sum.stg  sum_error.stg  take.stg
